--- a/src/pages/Calculator/calculator.module.scss
+++ b/src/pages/Calculator/calculator.module.scss
@@ -1,35 +1,37 @@
 .screen {
   padding: 100px;
-  position: fixed; top: 50%; left: 50%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.input{
+.input {
   display: flex;
   text-align: center;
   margin: 10px 0;
-  outline:none;
+  outline: none;
 }
 
 .input::-webkit-inner-spin-button,
-.input::-webkit-outer-spin-button{
+.input::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-.buttons{
+.buttons {
   display: flex;
   justify-content: center;
 }
 
-.button{
+.button {
   margin: 0 5px;
 }
 
-.output{
+.output {
   display: flex;
   text-align: center;
   margin: 10px 0;
   cursor: not-allowed;
-  outline:none;
+  outline: none;
 }
