Добавлена функция для вычислений

--- a/src/widgets/NumberInput/NumberInput.module.scss
+++ b/src/widgets/NumberInput/NumberInput.module.scss
@@ -1,6 +1,8 @@
 .input {
   display: flex;
   text-align: center;
-  margin: 10px 5px;
+  margin: 10px 10px;
+  border: 1px black solid;
+  padding: 5px;
   outline: none;
 }
