--- a/src/pages/Calculator/calculator.module.scss
+++ b/src/pages/Calculator/calculator.module.scss
@@ -1,5 +1,5 @@
 .screen {
-  padding: 30px;
+  padding: 100px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -14,7 +14,10 @@
 .output {
   display: flex;
   text-align: center;
-  margin: 10px 0;
-  cursor: not-allowed;
+  margin: 10px 10px;
+  border: 1px black solid;
+  padding: 5px;
   outline: none;
+
+  cursor: not-allowed;
 }
