Добавлены правки в функцию добавления задач в список

--- a/src/pages/TaskBook/TaskBook.module.scss
+++ b/src/pages/TaskBook/TaskBook.module.scss
@@ -1,16 +1,16 @@
 .screen {
   justify-content: center;
-  padding: 100px;
+  padding: 100px 25%;
 }
 
-.task{
+.task {
   display: flex;
   align-items: center;
   margin: 0 auto 10px;
 }
 
 .button,
-.checkbox{
+.checkbox {
   padding: 10px 25px;
   margin-right: 7px;
 }
